@@ -7,13 +7,14 @@
 * [#13] - Added support for filters on status change, e.g. {{#bugzilla:assigned=2009-05-01:2009-05-31}}, 
   {{#bugzilla:resolved=2009-05-01:2009-05-31}}, {{#bugzilla:verified=2009-05-01:2009-05-31}},
   {{#bugzilla:closed=2009-05-01:2009-05-31}}, {{#bugzilla:reopened=2009-05-01:2009-05-31}}
+* [#21] - Added support for reports on hardware and os, e.g.   {{#bugzilla:columns=+hardware,os}}
+  {{#bugzilla:columns=+hardware,os|os=Linux}}, {{#bugzilla:columns=+hardware,os|hardware=Macintosh}}
 * BUG : [#3]  - Task repeated in report for tasks with multiple keywords when keywords displayed in report
 * BUG : [#5]  - deadline (or any date) range matches did not work, e.g. deadline=2008-12-01:2008-12-31
 * BUG : [#6]  - bugzilla query link not generated correctly for id matches, e.g. {{#bugzilla:status=*|id=1,2,3}}
 * BUG : [#11] - Support html in comments for last comment rendering, e.g. <table>
 * BUG : [#12] - "worked_hours" field will be multiplied by the number of keywords you have, e.g. {{#bugzilla:debug=1|columns=+work,+keywords|status=*|keywords=analytics|sort=id|total=work}}
 * BUG : [#22] - support wiki style equals in comments without affecting the page TOC
-
 
 ==v1.0 - 12th February 2009==
 
